--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,18 @@
         android:theme="@style/Theme.ChopzV3"
         tools:targetApi="31">
         <activity
+            android:name=".AdminUser.AdminSignIn"
+            android:exported="false" />
+        <activity
+            android:name=".DriverUser.DriverSignIn"
+            android:exported="false" />
+        <activity
+            android:name=".RestaurantUser.RestaurantSignIn"
+            android:exported="false" />
+        <activity
+            android:name=".ClientUser.ClientUserSignIn"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
