--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.ChopzV3"
         tools:targetApi="31">
         <activity
+            android:name=".AddRestaurants"
+            android:exported="false" />
+        <activity
             android:name=".AdminUser.AdminSignIn"
             android:exported="false" />
         <activity
